--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.sql.init.mode=always
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.defer-datasource-initialization=true
+
+access_key=02a009b8e3922c395677a1e85406aca6
