--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/rest_practice
 spring.datasource.username=postgres
 spring.datasource.password=Ashkabat27
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
